@@ -1,7 +1,7 @@
 package org.bardframework.commons.utils.persian;
 
-import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 
 /**
@@ -9,7 +9,7 @@ import java.util.Set;
  */
 public final class IranianNationalNoUtils {
 
-    private static final Set<Long> nationalNoBlackList = new HashSet<>(Arrays.asList(Long.valueOf("0123456789"),
+    private static final Set<Long> nationalNoBlackList = new HashSet<>(List.of(Long.valueOf("0123456789"),
             Long.valueOf("1111111111"), Long.valueOf("2222222222"), Long.valueOf("3333333333"),
             Long.valueOf("4444444444"), Long.valueOf("5555555555"), Long.valueOf("6666666666"),
             Long.valueOf("7777777777"), Long.valueOf("8888888888"), Long.valueOf("9999999999")));
